name:                harkdown
version:             0.1.0.0
synopsis: A CommonMark compliant Markdown parser written in Haskell using Parsec.
-- description:
license:             AllRightsReserved
license-file:        LICENSE
author:              Palmer Paul, Jeremy Lautman
maintainer:          pzpaul2002@yahoo.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable harkdown
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.11, parsec >=3.1 && <3.2, pretty >=1.1 && <1.2
  hs-source-dirs:      src
  other-modules:       AST, HtmlFormatter, Parser, ParserCombinators
  default-language:    Haskell98

test-suite spec
  ghc-options:         -Wall
  type: exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       base >=4.10 && <4.11, parsec >=3.1 && <3.2, pretty >=1.1 && <1.2, HUnit >=1.6 && <1.7, aeson >=1.2 && <1.3, bytestring >=0.10 && <0.11, text >=1.2 && <1.3, QuickCheck >=2.10 && <2.11, cmark >=0.5 && <0.6 
  hs-source-dirs:      test, src
  other-modules:       AST, HorizontalRule, Parser, ParserCombinators, HtmlFormatter, SpecTests
  default-language:    Haskell98
