name:                harkdown
version:             0.1.0.0
synopsis: A CommonMark compliant Markdown parser written in Haskell using Parsec.
-- description:
license:             AllRightsReserved
license-file:        LICENSE
author:              Palmer Paul, Jeremy Lautman
maintainer:          pzpaul2002@yahoo.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable harkdown
  ghc-options:         -Wall -Wextra
  main-is:             Main.hs
  -- TODO remove HUnit
  build-depends:         base >=4.10 && <4.11
                       , containers >=0.5 && <0.6
                       , mtl >=2.2 && <2.3
                       , parsec >=3.1 && <3.2
                       , pretty >=1.1 && <1.2
                       , HUnit >=1.6 && <1.7
  hs-source-dirs:      src
  other-modules:         AST
                       , BlockParser
                       , HtmlFormatter
                       , InlineParser
                       , Parser
                       , ParserCombinators
  default-language:    Haskell98

test-suite spec
  ghc-options:         -Wall -Wextra
  type: exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:         aeson >=1.2 && <1.3
                       , base >=4.10 && <4.11
                       , bytestring >=0.10 && <0.11
                       , containers >=0.5 && <0.6
                       , HUnit >=1.6 && <1.7
                       , mtl >=2.2 && <2.3
                       , parsec >=3.1 && <3.2
                       , pretty >=1.1 && <1.2
                       , text >=1.2 && <1.3
  hs-source-dirs:      test, src
  other-modules:         AST
                       , BlockParser
                       , HtmlFormatter
                       , InlineParser
                       , Parser
                       , ParserCombinators
                       , SpecTests
  default-language:    Haskell98
